fix copy button covering long code-blocks

--- a/scss/components/_prism.scss
+++ b/scss/components/_prism.scss
@@ -45,6 +45,7 @@ pre.code-toolbar {
     transition: background-color 0.3s ease-in-out;
     border-radius: 0;
     height: 100%;
+    max-height: 55px;
     display: flex;
     flex-direction: column;
     align-items: center;
